Adding get application by ID endpoint
